crates/ts/tests/snapshots/baseline_diff__baseline_dedup_default_export_addition.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: c_button
  qualified_name: pkg/dist/c_button.c_button
  kind: Constant
  change_type: "Added(Symbol { kind: Constant })"
  is_breaking: false
  description: "Exported constant `c_button` was added"
  before: ~
  after: "constant: c_button"
  has_migration_target: false
