crates/ts/tests/snapshots/baseline_diff__baseline_dedup_default_export_removal.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: c_button
  qualified_name: pkg/dist/c_button.c_button
  kind: Constant
  change_type: SymbolRemoved
  is_breaking: true
  description: "Exported constant `c_button` was removed"
  before: "constant: c_button"
  after: ~
  has_migration_target: false
