crates/ts/tests/snapshots/baseline_diff__baseline_enum_member_added.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: Green
  qualified_name: Green
  kind: EnumMember
  change_type: "Added(Member { name: \"Green\", kind: EnumMember })"
  is_breaking: false
  description: "Enum member `Green` was added to `Color`"
  before: ~
  after: "enum member: Green: 1"
  has_migration_target: false
