crates/ts/tests/snapshots/baseline_diff__baseline_enum_member_removed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: Green
  qualified_name: Green
  kind: EnumMember
  change_type: "Removed(Member { name: \"Green\", kind: EnumMember })"
  is_breaking: true
  description: "Enum member `Green` was removed from `Color`"
  before: "enum member: Green"
  after: ~
  has_migration_target: false
