crates/ts/tests/snapshots/baseline_diff__baseline_interface_implementation_added.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: MyClass
  qualified_name: MyClass
  kind: Class
  change_type: "Added(InterfaceImpl { interface_name: \"Bar\" })"
  is_breaking: false
  description: "`MyClass` now implements `Bar`"
  before: ~
  after: Bar
  has_migration_target: false
