crates/ts/tests/snapshots/baseline_diff__baseline_interface_implementation_removed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: MyClass
  qualified_name: MyClass
  kind: Class
  change_type: InterfaceImplementationRemoved
  is_breaking: true
  description: "`MyClass` no longer implements `Bar`"
  before: Bar
  after: ~
  has_migration_target: false
